# CADExchanger_Test

./: CMakeLists.txt  README.md
ShapesLib/: CMakeLists.txt  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Shape.cpp  Shape.h  Shapes_API.h  Spiral.cpp  Spiral.h  Vec3.cpp  Vec3.h
ShapesTester/: CMakeLists.txt  ShapesTester.cpp
